--- a/favourites.html
+++ b/favourites.html
@@ -19,7 +19,7 @@
                 </linearGradient>
                 </defs>
                 </svg>
-        <a style="text-decoration: none;"class="home" href="index.html">home</a>
+        <a style="text-decoration: none;" class = "head" href="index.html">COLORIZE</a>
         <p id = "fselect"></p>
        <a style="text-decoration: none;"class="home" href="index.html">home</a>
         <a style="text-decoration: none;" id="explore" href="explore.html">explore</a>
