--- a/gradient.html
+++ b/gradient.html
@@ -19,9 +19,9 @@
                 </linearGradient>
                 </defs>
                 </svg>
-        <a style="text-decoration: none;" class = "head" href="home.html">COLORIZE</a>
+        <a style="text-decoration: none;" class = "head" href="index.html">COLORIZE</a>
         <p id = "gselect"></p>
-        <a style="text-decoration: none;" class="home" href="home.html">home</a>
+        <a style="text-decoration: none;" class="home" href="index.html">home</a>
         <a style="text-decoration: none;" id="explore" href="explore.html">explore</a>
         <a style="text-decoration: none;" id="create" href="create.html">create</a>   
         <a style="text-decoration: none;" id="gradient" href="gradient.html">gradient</a>
