--- a/create.html
+++ b/create.html
@@ -19,7 +19,7 @@
                 </linearGradient>
                 </defs>
                 </svg>
-        <a style="text-decoration: none;" class = "head" href="home.html">COLORIZE</a>
+        <a style="text-decoration: none;" class = "head" href="index.html">COLORIZE</a>
         <p style="text-decoration: none;" id = "cselect"></p>
         <a style="text-decoration: none;"class="home" href="index.html">home</a>
         <a style="text-decoration: none;" id="explore" href="explore.html">explore</a>
